[package]
name = "mfa-support-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json", "rustls", "rustls-tls-webpki-roots", "brotli", "gzip"], default-features = false }
rpassword = "7.3.1"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "parking_lot", "macros"] }
anyhow = "1.0.80"
env_logger = "0.11.2"
inquire = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.20"

[profile.release]
lto = true
opt-level = "z"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
